Added mutations, almost

--- a/test_evolutionary.ipynb
+++ b/test_evolutionary.ipynb
@@ -1163,6 +1163,46 @@
     "\n",
     "softmax(newer_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True False False]\n",
+      " [False  True  True]\n",
+      " [False False False]]\n",
+      "[[-0.1843369  -0.17935325 -0.18265285]\n",
+      " [ 0.18820847  0.07559631 -0.10169487]\n",
+      " [ 0.04081776  0.04234568  0.10163402]]\n",
+      "[[ 0.1843369   2.          3.        ]\n",
+      " [ 4.         -0.07559631  0.10169487]\n",
+      " [ 7.          8.          9.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# input array\n",
+    "x = np.array([[ 1., 2., 3.], [ 4., 5., 6.], [ 7., 8., 9.]])\n",
+    "\n",
+    "# random boolean mask for which values will be changed\n",
+    "mask = np.invert(np.random.randint(0,2,size=x.shape).astype(bool))\n",
+    "print(mask)\n",
+    "\n",
+    "# random matrix the same shape of your data\n",
+    "r = (np.random.rand(*x.shape) - 0.5) * 0.4\n",
+    "print(r)\n",
+    "\n",
+    "# use your mask to replace values in your input array\n",
+    "x[mask] = -r[mask]\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
