it works but gives veeery bad results

--- a/test_evolutionary.ipynb
+++ b/test_evolutionary.ipynb
@@ -1166,22 +1166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ True False False]\n",
-      " [False  True  True]\n",
-      " [False False False]]\n",
-      "[[-0.1843369  -0.17935325 -0.18265285]\n",
-      " [ 0.18820847  0.07559631 -0.10169487]\n",
-      " [ 0.04081776  0.04234568  0.10163402]]\n",
-      "[[ 0.1843369   2.          3.        ]\n",
-      " [ 4.         -0.07559631  0.10169487]\n",
-      " [ 7.          8.          9.        ]]\n"
+      "[[1. 2. 3.]\n",
+      " [4. 5. 6.]\n",
+      " [7. 8. 9.]]\n",
+      "[[ 0.02841362  0.10933008  3.        ]\n",
+      " [ 4.          5.          6.        ]\n",
+      " [-0.13447874 -0.13602066  9.        ]]\n"
      ]
     }
    ],
@@ -1193,15 +1190,34 @@
     "\n",
     "# random boolean mask for which values will be changed\n",
     "mask = np.invert(np.random.randint(0,2,size=x.shape).astype(bool))\n",
-    "print(mask)\n",
     "\n",
     "# random matrix the same shape of your data\n",
     "r = (np.random.rand(*x.shape) - 0.5) * 0.4\n",
-    "print(r)\n",
+    "print(x)\n",
     "\n",
     "# use your mask to replace values in your input array\n",
     "x[mask] = -r[mask]\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1, 2]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2] * 2"
    ]
   }
  ],
