--- a/test_evolutionary.ipynb
+++ b/test_evolutionary.ipynb
@@ -1166,19 +1166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ True False  True]\n",
+      " [False False  True]\n",
+      " [ True False False]]\n",
       "[[1. 2. 3.]\n",
       " [4. 5. 6.]\n",
       " [7. 8. 9.]]\n",
-      "[[ 0.02841362  0.10933008  3.        ]\n",
-      " [ 4.          5.          6.        ]\n",
-      " [-0.13447874 -0.13602066  9.        ]]\n"
+      "[[0.94718865 2.         2.84156595]\n",
+      " [4.         5.         5.6831319 ]\n",
+      " [6.63032055 8.         9.        ]]\n"
      ]
     }
    ],
@@ -1190,13 +1193,13 @@
     "\n",
     "# random boolean mask for which values will be changed\n",
     "mask = np.invert(np.random.randint(0,2,size=x.shape).astype(bool))\n",
-    "\n",
+    "print(mask)\n",
     "# random matrix the same shape of your data\n",
     "r = (np.random.rand(*x.shape) - 0.5) * 0.4\n",
     "print(x)\n",
     "\n",
     "# use your mask to replace values in your input array\n",
-    "x[mask] = -r[mask]\n",
+    "x[mask] += x[mask] * (np.random.rand() - 0.5) * 0.2\n",
     "print(x)"
    ]
   },
