Kill params set after it has been alive for 10 generations

--- a/test_evolutionary.ipynb
+++ b/test_evolutionary.ipynb
@@ -89,6 +89,29 @@
     "test = np.concatenate((thing1, thing2))\n",
     "test.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "repl = [0, 0, 0]\n",
+    "tmp[:3] = repl\n",
+    "tmp"
+   ]
   }
  ],
  "metadata": {
